@@ -30,6 +30,7 @@
 #include "player-input.h"
 #include "input-manager.h"
 
+#include "game-sound.h"
 #define FRAME_DELAY 10
 
 #define PRIVATE(game_network_player) (game_network_player->private)
@@ -467,7 +468,7 @@ game_network_player_new (GtkWidget * window, MonkeyCanvas * canvas,
 			 int monkey_id, int score)
 {
 	GameNetworkPlayer *game;
-
+        MbGameSound * mgs;
         int i,x,y;
 	MbInputManager *input_manager;
 	game = GAME_NETWORK_PLAYER (g_object_new
@@ -549,6 +550,8 @@ game_network_player_new (GtkWidget * window, MonkeyCanvas * canvas,
 
 
 
+        mgs = mb_game_sound_new();
+        mb_game_sound_connect_monkey(mgs,PRIVATE(game)->monkey);
 
 	input_manager = mb_input_manager_get_instance ();
 	PRIVATE (game)->input = mb_input_manager_get_left (input_manager);
